@@ -72,6 +72,7 @@ VALUE redcloth_bbcode_inline2(VALUE, VALUE, VALUE);
 #define RESET_REG()    reg = NULL
 #define CAT(H)         rb_str_cat(H, ts, te-ts)
 #define CLEAR(H)       H = STR_NEW2("")
+#define RSTRIP_BANG(H)      rb_funcall(H, rb_intern("rstrip!"), 0)
 #define SET_PLAIN_BLOCK(T) plain_block = STR_NEW2(T)
 #define RESET_TYPE(T)  rb_hash_aset(regs, ID2SYM(rb_intern("type")), plain_block)
 #define INLINE(H, T)   rb_str_append(H, rb_funcall(self, rb_intern(T), 1, regs))
